Update launcher icon

--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -6,5 +6,5 @@
         <item name="android:windowBackground">@drawable/launch_background</item>
     </style>
 
-    <color name="limeGreen">#8BC34A</color>
+    <color name="charcoal">#262626</color>
 </resources>
